--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
  <head>
- <meta charset="utf-8">
-  <title></title>
+  <meta charset="utf-8">
+  <title>Test GitHub Hosting</title>
+  <link rel="stylesheet" type="text/css" href="my-style.css">
  </head>
 
 <body>
